--- a/project.json
+++ b/project.json
@@ -1,7 +1,9 @@
 {
-    "Modules": [{
+    "Modules": [
+        {
         "ModuleName": "Roles",
-        "Pages": [{
+        "Pages": [
+            {
                 "PageName": "list.vue",
                 "type": "list",
                 "PageTitle": "角色管理列表",
@@ -37,58 +39,57 @@
                             "pageSize": "pageSize",
                             "currentPage": "currentPage"
                         }
-                    },
-                    "dialog":[
-                        {
-                            "label": "角色类型",
-                            "type": "select",
-                            "field": "roleType",
-                            "displayName": "name",
-                            "displayValue": "value",
-                            "dataSource": "salesRouteA",
-                            "on": true,
-                            "required": true
-                        }
-                    ]
-                }
+                    }
+                },
+                "model":[
+                    {
+                        "label": "角色类型",
+                        "type": "select",
+                        "field": "roleType",
+                        "displayName": "name",
+                        "displayValue": "value",
+                        "dataSource": "salesRouteA",
+                        "on": true,
+                        "required": true
+                    }
+                ]
             },
             {
                 "PageName": "save.vue",
                 "type": "save",
-                "config": {
-                    "model": [{
-                            "label": "角色类型",
-                            "type": "select",
-                            "field": "roleType",
-                            "displayName": "name",
-                            "displayValue": "value",
-                            "dataSource": "salesRouteA",
-                            "on": true,
-                            "required": true
-                        },
-                        {
-                            "label": "角色名称",
-                            "type": "text",
-                            "field": "roleName"
-                        }
-                    ]
-                }
+                "model":[
+                    {
+                        "label": "角色类型",
+                        "type": "select",
+                        "field": "roleType",
+                        "displayName": "name",
+                        "displayValue": "value",
+                        "dataSource": "salesRouteA",
+                        "on": true,
+                        "required": true
+                    },
+                    {
+                        "label": "角色名称",
+                        "type": "text",
+                        "field": "roleName"
+                    }
+                ]
             }
         ],
         "Services": {
             "create": {
+                "reqType":"post",
                 "url": "/api/getRoleTypes"
             },
             "update": {
+                "reqType":"post",
                 "url": "/api/getRoleTypes"
             },
             "remove": {
+                "reqType":"post",
                 "url": "/api/getRoleTypes"
             },
             "detail": {
-                "url": "/api/getRoleTypes"
-            },
-            "list": {
                 "url": "/api/getRoleTypes"
             }
         },
@@ -99,14 +100,14 @@
                     "url": "/api/getRoleTypes"
                 },
                 {
-                    "name": "salesRoute-B",
-                    "type": "array",
-                    "Enum": "KEYS.SALES.ACTION_LIST"
+                    "name": "salesRoute_B",
+                    "type": "enum",
+                    "url": "KEYS.SALES.ACTION_LIST"
                 },
                 {
-                    "name": "salesRoute-C",
-                    "type": "json",
-                    "Enum": "KEYS.SALES.ACTION_List_C"
+                    "name": "salesRoute_C",
+                    "type": "enum",
+                    "url": "KEYS.SALES.ACTION_List_C"
                 }
             ]
         }
