--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
     "Modules": [
-        {
+    {
         "ModuleName": "Roles",
         "Pages": [
             {
@@ -124,5 +124,131 @@
                 }
             ]
         }
-    }]
+    },
+    {
+        "ModuleName": "Menus",
+        "Pages": [
+            {
+                "PageName": "list.vue",
+                "type": "list",
+                "PageTitle": "菜单管理列表",
+                "config": {
+                    "searchModel": [
+                        {
+                            "label": "菜单名称",
+                            "type": "text",
+                            "field": "MenuName"
+                        },
+                        {
+                            "label": "菜单类型",
+                            "type": "select",
+                            "field": "roleType",
+                            "displayName": "name",
+                            "displayValue": "value",
+                            "dataSource": "MenusRoute"
+                        }
+                    ],
+                    "table": {
+                        "url": "/api/getRoleTypesss",
+                        "map": [
+                            {
+                                "field": "channelCode",
+                                "label": "Sale Channel"
+                            },
+                            {
+                                "field": "materialNumber",
+                                "label": "Material"
+                            }
+                        ],
+                        "page": {
+                            "pageSize": "pageSize",
+                            "currentPage": "currentPage"
+                        }
+                    }
+                },
+                "model":[
+                    {
+                        "label": "其他类型",
+                        "type": "select",
+                        "field": "roleType",
+                        "displayName": "name",
+                        "displayValue": "value",
+                        "dataSource": "salesRouteA",
+                        "on": true,
+                        "required": true
+                    }
+                ]
+            },
+            {
+                "PageName": "save.vue",
+                "type": "save",
+                "model":[
+                    {
+                        "label": "菜单类型",
+                        "type": "select",
+                        "field": "roleType",
+                        "displayName": "name",
+                        "displayValue": "value",
+                        "dataSource": "salesRouteA",
+                        "on": true,
+                        "required": true
+                    },
+                    {
+                        "label": "菜单别名",
+                        "type": "text",
+                        "field": "roleName"
+                    }
+                ]
+            }
+        ],
+        "Services": {
+            "create": {
+                "reqType":"post",
+                "url": "/api/getMenuTypes"
+            },
+            "update": {
+                "reqType":"post",
+                "url": ""
+            },
+            "remove": {
+                "reqType":"post",
+                "url": "/api/getMenuTypes"
+            },
+            "detail": {
+                "url": "/api/getMenuTypes"
+            },
+            "list": {
+                "url": "/api/getMenuTypes"
+            },
+            "querySubItems":{
+                "url": "/api/getMenusSubItems"
+            }
+        },
+        "Store": {
+            "state": [
+                {
+                    "name": "menusRoute",
+                    "type": "array",
+                    "url": "/api/getMenuTypes"
+                },
+                {
+                    "name": "MenusRoute_A",
+                    "type": "array",
+                    "reqType":"post",
+                    "url": "/api/getRoleTypes"
+                },
+                {
+                    "name": "MenusRoute_B",
+                    "type": "enum",
+                    "url": "KEYS.SALES.ACTION_LIST_BB"
+                },
+                {
+                    "name": "MenusRoute_C",
+                    "type": "enum",
+                    "url": "KEYS.SALES.ACTION_List_CC"
+                }
+            ]
+        }
+    }
+]
 }
