--- a/project.json
+++ b/project.json
@@ -1,15 +1,12 @@
 {
-    "Modules": [
-    {
+    "Modules": [{
         "ModuleName": "Roles",
-        "Pages": [
-            {
-                "PageName": "list.vue",
+        "Pages": [{
+                "pageName": "list.vue",
                 "type": "list",
-                "PageTitle": "角色管理列表",
+                "pageTitle": "角色管理列表",
                 "config": {
-                    "searchModel": [
-                        {
+                    "searchModel": [{
                             "label": "角色名称",
                             "type": "text",
                             "field": "roleName"
@@ -25,8 +22,7 @@
                     ],
                     "table": {
                         "url": "/api/getRoleTypes",
-                        "map": [
-                            {
+                        "map": [{
                                 "field": "channelCode",
                                 "label": "Sale Channel"
                             },
@@ -41,24 +37,21 @@
                         }
                     }
                 },
-                "model":[
-                    {
-                        "label": "角色类型",
-                        "type": "select",
-                        "field": "roleType",
-                        "displayName": "name",
-                        "displayValue": "value",
-                        "dataSource": "salesRouteA",
-                        "on": true,
-                        "required": true
-                    }
-                ]
+                "model": [{
+                    "label": "角色类型",
+                    "type": "select",
+                    "field": "roleType",
+                    "displayName": "name",
+                    "displayValue": "value",
+                    "dataSource": "salesRouteA",
+                    "on": true,
+                    "required": true
+                }]
             },
             {
-                "PageName": "save.vue",
+                "pageName": "save.vue",
                 "type": "save",
-                "model":[
-                    {
+                "model": [{
                         "label": "角色类型",
                         "type": "select",
                         "field": "roleType",
@@ -76,38 +69,36 @@
                 ]
             }
         ],
-        "Services": [
-            {
-                "name":"create",
-                "reqType":"post",
+        "Services": [{
+                "name": "create",
+                "reqType": "post",
                 "url": "/api/getRoleTypes"
             },
             {
-                "name":"update",
-                "reqType":"post",
+                "name": "update",
+                "reqType": "post",
                 "url": ""
             },
             {
-                "name":"remove",
-                "reqType":"post",
+                "name": "remove",
+                "reqType": "post",
                 "url": "/api/getRoleTypes"
             },
             {
-                "name":"detail",
+                "name": "detail",
                 "url": "/api/getRoleTypes"
             },
             {
-                "name":"list",
+                "name": "list",
                 "url": "/api/getRoleTypes"
             },
             {
-                "name":"querySubItems",
+                "name": "querySubItems",
                 "url": "/api/getSubItems"
             }
         ],
         "Store": {
-            "state": [
-                {
+            "state": [{
                     "name": "salesRoute",
                     "type": "array",
                     "url": "/api/getRoleTypes"
@@ -115,7 +106,7 @@
                 {
                     "name": "salesRoute_A",
                     "type": "array",
-                    "reqType":"post",
+                    "reqType": "post",
                     "url": "/api/getRoleTypes"
                 },
                 {
@@ -133,14 +124,12 @@
     },
     {
         "ModuleName": "Menus",
-        "Pages": [
-            {
-                "PageName": "list.vue",
+        "Pages": [{
+                "pageName": "list.vue",
                 "type": "list",
-                "PageTitle": "菜单管理列表",
+                "pageTitle": "菜单管理列表",
                 "config": {
-                    "searchModel": [
-                        {
+                    "searchModel": [{
                             "label": "菜单名称",
                             "type": "text",
                             "field": "MenuName"
@@ -156,8 +145,7 @@
                     ],
                     "table": {
                         "url": "/api/getRoleTypesss",
-                        "map": [
-                            {
+                        "map": [{
                                 "field": "channelCode",
                                 "label": "Sale Channel"
                             },
@@ -172,24 +160,21 @@
                         }
                     }
                 },
-                "model":[
-                    {
-                        "label": "其他类型",
-                        "type": "select",
-                        "field": "roleType",
-                        "displayName": "name",
-                        "displayValue": "value",
-                        "dataSource": "salesRouteA",
-                        "on": true,
-                        "required": true
-                    }
-                ]
+                "model": [{
+                    "label": "其他类型",
+                    "type": "select",
+                    "field": "roleType",
+                    "displayName": "name",
+                    "displayValue": "value",
+                    "dataSource": "salesRouteA",
+                    "on": true,
+                    "required": true
+                }]
             },
             {
-                "PageName": "save.vue",
+                "pageName": "save.vue",
                 "type": "save",
-                "model":[
-                    {
+                "model": [{
                         "label": "菜单类型",
                         "type": "select",
                         "field": "roleType",
@@ -207,32 +192,37 @@
                 ]
             }
         ],
-        "Services": {
-            "create": {
-                "reqType":"post",
+        "Services": [
+            {
+                "name":"create",
+                "reqType": "post",
                 "url": "/api/getMenuTypes"
             },
-            "update": {
-                "reqType":"post",
+            {
+               "name":"update",
+                "reqType": "post",
                 "url": ""
             },
-            "remove": {
-                "reqType":"post",
+            {
+               "name":"remove",
+                "reqType": "post",
                 "url": "/api/getMenuTypes"
             },
-            "detail": {
+            {
+               "name":"detail",
                 "url": "/api/getMenuTypes"
             },
-            "list": {
+            {
+               "name":"list",
                 "url": "/api/getMenuTypes"
             },
-            "querySubItems":{
+            {
+               "name":"querySubItems",
                 "url": "/api/getMenusSubItems"
             }
-        },
+       ],
         "Store": {
-            "state": [
-                {
+            "state": [{
                     "name": "menusRoute",
                     "type": "array",
                     "url": "/api/getMenuTypes"
@@ -240,7 +230,7 @@
                 {
                     "name": "MenusRoute_A",
                     "type": "array",
-                    "reqType":"post",
+                    "reqType": "post",
                     "url": "/api/getRoleTypes"
                 },
                 {
